# financial_agent_system

./: .env.sample  .gitignore  .rooignore  AGENTS.md  Makefile  README.md  docker-compose.override.yml  docker-compose.yml  render.yaml
app/: Dockerfile  crud.py  database.py  dependencies.py  logging_config.py  main.py  models.py  pyproject.toml  schemas.py  security.py
app/agents/: callbacks.py  config_loader.py  market_data_agent.py  orchestrator_agent.py  portfolio_analyzer_agent.py  tools.py
app/agents/configs/: analysis_agent.yaml  management_agent.yaml  registration_agent.yaml  router_agent.yaml
app/routers/: agent.py  agent_actions.py  assets.py  auth.py  dividends.py  transactions.py
docs/: blueprint-phase-1-foundation-and-setup.md  blueprint-phase-10-data-management-agent.md  blueprint-phase-11-global-transaction-listing.md  blueprint-phase-12-portfolio-analysis.md  blueprint-phase-13-analysis-agent.md  blueprint-phase-17-readonly-dashboard.md  blueprint-phase-2-domain-modeling-and-database.md  blueprint-phase-3-core-api-endpoints-and-schemas.md  blueprint-phase-4-market-data-agent-and-price-fetching.md  blueprint-phase-5-transaction-and-divedend-endpoints.md  blueprint-phase-6-portfolio-analyzer-agent-and-calculations.md  blueprint-phase-7-switch-to-decimal.md  blueprint-phase-8-portfolio-registration-agent.md  blueprint-phase-9-data-management.md  blueprint-phase14-web-interface.md  blueprint-phase16-assets-list.md  initial-prd.md  instruction.md  password-hash.md  prd-core.md  prompt-draft.md
tests/: conftest.py  test_agent_actions_api.py  (+13 more)
(+29 files in other folders)
